[tool.pdm]

[project]
name = "inlinepvbot"
version = "0.1.4"
description = "A Telegram bot to generate inline previews of various social networking websites."
authors = [
    {name = "Mike Lei"},
]
dependencies = [
    "pyTelegramBotAPI>=4.11.0",
    "aiohttp>=3.8.4",
    "pyyaml>=6.0",
    "pydantic>=1.10.7",
]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
repository = "https://github.com/mikelei8291/InlinePreviewBot"

[project.scripts]
inlinepvbot = "inlinepvbot.bot:main"

[tool.pdm.build]
includes = ["inlinepvbot"]
source-includes = ["LICENSE", "README.md"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
